RESOLVED FIXED216440
REGRESSION (r266817): ASSERTION FAILED: injectedBundle.isTestRunning() on imported/w3c/web-platform-tests/service-workers/service-worker/svg-target-reftest.https.html
https://bugs.webkit.org/show_bug.cgi?id=216440
Summary REGRESSION (r266817): ASSERTION FAILED: injectedBundle.isTestRunning() on imp...
Alexey Proskuryakov
Reported 2020-09-12 10:47:26 PDT
imported/w3c/web-platform-tests/service-workers/service-worker/svg-target-reftest.https.html turned from a failure to pass on release, but it crashes with an assertion in debug consistently. 1 0x12ccd064c WTFCrash 2 0x14159b220 WTR::makeValueRefForValue(OpaqueJSContext const*, objc_object*) 3 0x1415df360 WTR::InjectedBundlePage::dump() 4 0x1415e4200 WTR::dumpAfterWaitAttributeIsRemoved(void*) History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fservice-workers%2Fservice-worker%2Fsvg-target-reftest.https.html Stack trace: https://build.webkit.org/results/Apple-Catalina-Debug-WK2-Tests/r266887%20(6555)/imported/w3c/web-platform-tests/service-workers/service-worker/svg-target-reftest.https-stderr.txt
Attachments
Patch (9.19 KB, patch)
2020-09-12 13:58 PDT, Darin Adler
no flags
Patch (11.82 KB, patch)
2020-09-12 14:57 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2020-09-12 12:32:11 PDT
Can fix by adding: if (!testRunning) return; To dumpAfterWaitAttributeIsRemoved.
Darin Adler
Comment 2 2020-09-12 12:48:27 PDT
When I run this in the debugger, instead of a crash I get a hang.
Darin Adler
Comment 3 2020-09-12 12:49:37 PDT
(In reply to Darin Adler from comment #2) > When I run this in the debugger, instead of a crash I get a hang. Oh, never mind, that’s because I was trying to run from a local file instead of with the WPT server.
Darin Adler
Comment 4 2020-09-12 12:50:11 PDT
And service workers don’t work from local files.
Darin Adler
Comment 5 2020-09-12 13:58:53 PDT Comment hidden (obsolete)
Darin Adler
Comment 6 2020-09-12 14:57:16 PDT
EWS Watchlist
Comment 7 2020-09-12 14:58:03 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 8 2020-09-12 16:44:31 PDT
Committed r266984: <https://trac.webkit.org/changeset/266984> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408612 [details].
Radar WebKit Bug Importer
Comment 9 2020-09-12 16:45:29 PDT
Note You need to log in before you can comment on or make changes to this bug.